--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,14 @@ html, body {
     height: 100%;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Raleway:wght@300&display=swap');
+@main-font:'Raleway', sans-serif;
+@header-font:'Merienda', cursive;
+
+header{
+	h1, h2{
+		font-family: @header-font;}
+}
+p{
+	font-family: @main-font;
+}
