--- a/css/index.css
+++ b/css/index.css
@@ -148,11 +148,13 @@ html,
 body {
   height: 100%;
   width: 100%;
-  margin: 2%;
+  margin: 5%;
+  padding: 2%;
   display: flex;
   flex-flow: column wrap;
   align-content: space-between;
   background-color: #D9CAB8;
+  border: 1px solid black;
 }
 html h1,
 body h1,
@@ -181,18 +183,47 @@ html ul,
 body ul {
   font-family: 'Raleway', sans-serif;
 }
-header h1 {
-  font-size: 2rem;
+.top-content {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
 }
-header img {
+.top-content .top-one {
+  width: 100%;
+  border-bottom: 1px solid gray;
+  margin-bottom: 2%;
+  padding-bottom: 2%;
+}
+.top-content .top-two {
+  width: 100%;
+  margin-top: 2%;
+}
+.top-content img {
   width: 50%;
 }
-header button {
+.top-content h1 {
+  font-size: 2rem;
+  width: 100%;
+}
+.top-content h2 {
+  width: 100%;
+}
+.top-content button {
   width: 20%;
 }
-.middle-content div {
-  width: 50%;
+.middle-content {
+  width: 100%;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
+  border: 1px solid black;
+  justify-content: space-between;
+}
+.middle-content div {
+  width: 30%;
+}
+.bottom-content {
+  border: 1px solid black;
+}
+footer {
   border: 1px solid black;
 }
