--- a/css/index.css
+++ b/css/index.css
@@ -147,14 +147,12 @@ table {
 html,
 body {
   height: 100%;
-  width: 100%;
   margin: 5%;
   padding: 2%;
   display: flex;
   flex-flow: column wrap;
   align-content: space-between;
   background-color: #D9CAB8;
-  border: 1px solid black;
 }
 html h1,
 body h1,
@@ -181,7 +179,23 @@ body th {
 }
 html ul,
 body ul {
+  width: 100%;
   font-family: 'Raleway', sans-serif;
+}
+.all-content {
+  width: 100%;
+  border: 1px solid black;
+}
+header {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  border: 1px solid black;
+}
+header nav {
+  width: 100%;
+  text-decoration: none;
+  font-family: 'Merienda', cursive;
 }
 .top-content {
   width: 100%;
@@ -222,8 +236,10 @@ body ul {
   width: 30%;
 }
 .bottom-content {
+  width: 100%;
   border: 1px solid black;
 }
 footer {
+  width: 100%;
   border: 1px solid black;
 }
