--- a/less/index.less
+++ b/less/index.less
@@ -61,14 +61,14 @@ table {
 
 html, body {
 	height: 100%;
-	width: 100%;
+	
 	margin: 5%;
 	padding: 2%;
 	display: flex;
 	flex-flow: column wrap;
 	align-content: space-between;
 	background-color: #D9CAB8;
-	border: @contain;
+	
 	h1, h2, h3{
 		font-family: @header-font;
 		color: #44302A;
@@ -85,8 +85,25 @@ html, body {
 		color: #44302A;
 	}	
 	ul{
+		width: 100%;
 		font-family: @main-font;
+	}
 }
+.all-content{
+	width: 100%;
+	border: @contain;
+}
+header{
+	display: flex;
+	justify-content: flex-end;
+	width: 100%;
+	border: @contain;
+	nav{
+		width: 100%;
+		text-decoration: none;
+		font-family: @header-font;
+	}
+
 }
 .top-content{
 	width:100%;
@@ -129,9 +146,11 @@ html, body {
 }
 
 .bottom-content{
+	width: 100%;
 	border: @contain;
 }
 footer{
+	width: 100%;
 	border: @contain;
 }
 
